k8s/altair/apps/postgresql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: postgresql
spec:
  type: LoadBalancer
  selector:
    cnpg.io/cluster: postgresql
    cnpg.io/instanceRole: primary
  ports:
    - port: 5432
      targetPort: 5432
